--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,17 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "mdb-react-ui-kit": "^5.1.0",
+    "monaco-editor": "^0.36.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
     "three": "^0.150.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "y-monaco": "^0.1.4",
+    "y-webrtc": "^10.2.5",
+    "y-websocket": "^1.5.0",
+    "yjs": "^13.5.50"
   },
   "scripts": {
     "start": "react-scripts start",
