feat: socket.io versus integration

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 JUDGE_0_API_KEY=d54f68f664msh4dcc91fed2cd856p1f9862jsn60ced304edec
+REDIS_PASSWORD=jXRAc4XdhYDUz5NE3pGpsrE80cRIPk7x
+REDIS_HOST=redis-12583.c17.us-east-1-4.ec2.cloud.redislabs.com
+REDIS_PORT=12583
 OPEN_AI_ORGANIZATION=org-FkhGnGKp0LlvGkEhfdfwziZd
 OPEN_AI_API_KEY=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
