--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
+    "socket.io-client": "^4.6.1",
     "sort-by": "^1.2.0",
     "three": "^0.150.1",
     "web-vitals": "^2.1.4",
