feat: fixed URLs

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ REDIS_HOST=redis-12583.c17.us-east-1-4.ec2.cloud.redislabs.com
 REDIS_PORT=12583
 OPEN_AI_ORGANIZATION=org-FkhGnGKp0LlvGkEhfdfwziZd
 OPEN_AI_API_KEY=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
+FRONTEND_URL=http://localhost:3000
