--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 REACT_APP_CODESTRUCTION_DOMAIN=dev-p4nhbbnq76fwy0bj.us.auth0.com
+REACT_APP_BACKEND_URL=http://localhost:8000
 REACT_APP_CODESTRUCTION_CLIENT_ID=UuLJjYZCsEc2jI93fKjyyiJLyD0GOfrE
